--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "rc-input-number": "^3.0.3",
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
     "react-native-tabs": "^1.0.9"
