--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -10,6 +10,7 @@
     "rc-input-number": "^3.0.3",
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
+    "react-native-credit-card-input": "^0.3.3",
     "react-native-tabs": "^1.0.9"
   },
   "devDependencies": {
