--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha src/test/"
+    "test": "node ./node_modules/mocha/bin/mocha out/"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "mocha": "^3.2.0"
   },
   "dependencies": {
+    "chai": "^3.5.0",
     "graphql": "^0.9.1"
   }
 }
