--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}\\index.js",
+            "program": "${workspaceRoot}/out/app.js",
             "cwd": "${workspaceRoot}"
         },
         {
