--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "express": "^4.15.0",
     "express-graphql": "^0.6.3",
     "graphql": "^0.9.1",
-    "mongoose": "^4.8.5"
+    "mongoose": "^4.8.5",
+    "node-fetch": "^1.6.3",
+    "winston": "^2.3.1"
   }
 }
