--- a/WebAdmin/package.json
+++ b/WebAdmin/package.json
@@ -26,6 +26,7 @@
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
