--- a/WebAdmin/package.json
+++ b/WebAdmin/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "classnames": "^2.2.5",
+    "fixed-data-table": "^0.6.3",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-tslint": "^7.1.0",
