--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,8 @@
     "exclude": [
         "node_modules",    
         "typings/browser.d.ts",
-        "typings/browser"
+        "typings/browser",
+        "out",
+        "server/out"
     ]
 }
