Hiding graphql queries on test

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -25,6 +25,7 @@
             ],
 			"env": {
 				"NODE_ENV": "test"
+                //"SHOW_GRAPHQL_QUERIES": "true"
 			}
         },
         {
