--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}/out/server/src/startServer.js",
+            "program": "${workspaceRoot}/out/startServer.js",
             "cwd": "${workspaceRoot}",
 			"env": {
 				"NODE_ENV": "development",
@@ -22,7 +22,7 @@
             "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
             "cwd": "${workspaceRoot}",
             "args": [
-                "out/server/src/test", 
+                "out/test", 
                 "--no-timeouts"
                 //,"-g", "order save"
             ],
@@ -35,7 +35,7 @@
             "type": "node",
             "request": "launch",
             "name": "Seed",
-            "program": "${workspaceRoot}/out/server/src/db/seed.js",
+            "program": "${workspaceRoot}/out/db/seed.js",
             "cwd": "${workspaceRoot}",
             "args": [
             ],
