--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,6 @@
         "node_modules",    
         "typings/browser.d.ts",
         "typings/browser",
-        "out",
-        "server/out"
+        "out"
     ]
 }
