--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "graphql": "^0.9.1",
     "mongoose": "^4.8.5",
     "node-fetch": "^1.6.3",
+    "typescript": "^2.2.2",
     "winston": "^2.3.1"
   }
 }
