--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.0",
     "express-graphql": "^0.6.3",
+    "geolib": "^2.0.22",
     "graphql": "^0.9.1",
     "mongoose": "^4.8.5",
     "node-fetch": "^1.6.3",
