--- a/MobileApp/tsconfig.json
+++ b/MobileApp/tsconfig.json
@@ -13,7 +13,8 @@
     "include": [
         "src/**/*.ts",
         "src/**/*.tsx",
-        "src/**/*.js"
+        "src/**/*.js",
+	    "**/*.d.ts"
     ],
     "compileOnSave": false
 }
