--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
     "mocha": "^3.2.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "express": "^4.15.0",
     "express-graphql": "^0.6.3",
     "geolib": "^2.0.22",
     "graphql": "^0.9.1",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.5",
     "node-fetch": "^1.6.3",
     "node-telegram-bot-api": "^0.27.0",
