--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "geolib": "^2.0.22",
     "graphql": "^0.9.1",
     "jsonwebtoken": "^7.3.0",
+    "mock-require": "^2.0.2",
     "mongoose": "^4.8.5",
     "node-fetch": "^1.6.3",
     "node-telegram-bot-api": "^0.27.0",
