--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -11,6 +11,7 @@
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
     "react-native-credit-card-input": "^0.3.3",
+    "react-native-push-notification": "^3.0.0",
     "react-native-tabs": "^1.0.9"
   },
   "devDependencies": {
