--- a/MobileApp/android/settings.gradle
+++ b/MobileApp/android/settings.gradle
@@ -1,4 +1,6 @@
-rootProject.name = 'Pura Cozinha'
+rootProject.name = 'PuraCozinha'
+include ':react-native-paypal-wrapper'
+project(':react-native-paypal-wrapper').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-paypal-wrapper/android')
 include ':react-native-push-notification'
 project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
 
