--- a/MobileApp/ios/PuraCozinha.xcodeproj/xcshareddata/xcschemes/PuraCozinha.xcscheme
+++ b/MobileApp/ios/PuraCozinha.xcodeproj/xcshareddata/xcschemes/PuraCozinha.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MobileApp.app"
-               BlueprintName = "MobileApp"
-               ReferencedContainer = "container:MobileApp.xcodeproj">
+               BuildableName = "PuraCozinha.app"
+               BlueprintName = "PuraCozinha"
+               ReferencedContainer = "container:PuraCozinha.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MobileAppTests.xctest"
-               BlueprintName = "MobileAppTests"
-               ReferencedContainer = "container:MobileApp.xcodeproj">
+               BuildableName = "PuraCozinhaTests.xctest"
+               BlueprintName = "PuraCozinhaTests"
+               ReferencedContainer = "container:PuraCozinha.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MobileAppTests.xctest"
-               BlueprintName = "MobileAppTests"
-               ReferencedContainer = "container:MobileApp.xcodeproj">
+               BuildableName = "PuraCozinhaTests.xctest"
+               BlueprintName = "PuraCozinhaTests"
+               ReferencedContainer = "container:PuraCozinha.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MobileApp.app"
-            BlueprintName = "MobileApp"
-            ReferencedContainer = "container:MobileApp.xcodeproj">
+            BuildableName = "PuraCozinha.app"
+            BlueprintName = "PuraCozinha"
+            ReferencedContainer = "container:PuraCozinha.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MobileApp.app"
-            BlueprintName = "MobileApp"
-            ReferencedContainer = "container:MobileApp.xcodeproj">
+            BuildableName = "PuraCozinha.app"
+            BlueprintName = "PuraCozinha"
+            ReferencedContainer = "container:PuraCozinha.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MobileApp.app"
-            BlueprintName = "MobileApp"
-            ReferencedContainer = "container:MobileApp.xcodeproj">
+            BuildableName = "PuraCozinha.app"
+            BlueprintName = "PuraCozinha"
+            ReferencedContainer = "container:PuraCozinha.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
