--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "PuraCozinhaApp",
-  "version": "1.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "rc-input-number": "^3.2.1",
-    "react": "~15.4.0-rc.4",
-    "react-native": "0.40.0",
-    "react-native-credit-card-input": "^0.3.3",
-    "react-native-push-notification": "^3.0.0",
-    "react-native-tabs": "^1.0.9"
-  },
-  "devDependencies": {
-    "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "jest": "18.1.0",
-    "react-test-renderer": "~15.4.0-rc.4"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+	"name": "PuraCozinha",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"rc-input-number": "^3.6.0",
+		"react": "16.0.0-alpha.12",
+		"react-native": "0.45.1",
+		"react-native-paypal-wrapper": "^1.0.0",
+		"react-native-push-notification": "^3.0.0",
+		"react-native-tabs": "^1.0.9"
+	},
+	"devDependencies": {
+		"babel-jest": "20.0.3",
+		"babel-preset-react-native": "2.0.0",
+		"jest": "20.0.4",
+		"react-test-renderer": "16.0.0-alpha.12"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
