--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -10,6 +10,7 @@
 		"rc-input-number": "^3.6.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.45.1",
+		"react-native-deprecated-custom-components": "^0.1.0",
 		"react-native-paypal-wrapper": "^1.0.0",
 		"react-native-push-notification": "^3.0.0",
 		"react-native-tabs": "^1.0.9"
