--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha out/"
+    "test": "node ./node_modules/mocha/bin/mocha out/",
+    "seed": "node out/db/seed.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "mocha": "^4.0.1"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
@@ -17,12 +18,12 @@
     "express": "^4.15.0",
     "express-graphql": "^0.6.3",
     "geolib": "^2.0.22",
-    "graphql": "^0.9.1",
-    "jsonwebtoken": "^7.3.0",
+    "graphql": "^0.11.7",
+    "jsonwebtoken": "^8.1.0",
     "mock-require": "^2.0.2",
-    "mongoose": "^4.8.5",
+    "mongoose": "^4.13.1",
     "node-fetch": "^1.6.3",
-    "node-telegram-bot-api": "^0.27.0",
+    "node-telegram-bot-api": "^0.29.0",
     "paypal-rest-sdk": "^1.7.1",
     "typescript": "^2.2.2",
     "winston": "^2.3.1"
