--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mocha": "^2.2.47",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.0.0",
+    "@types/node": "^9.4.0",
     "@types/node-telegram-bot-api": "^0.28.2",
     "@types/react": "^16.0.35",
     "@types/react-dom": "^16.0.3",
