--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "gulp-typescript": "^3.2.4",
     "gulp-uglify": "^3.0.0",
     "lodash": "^4.17.4",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.31",
     "material-ui-icons": "^1.0.0-beta.17",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
@@ -52,6 +52,7 @@
     "node-fetch": "^1.7.3",
     "node-telegram-bot-api": "^0.30.0",
     "path": "^0.12.7",
+    "paypal-rest-sdk": "^1.8.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "rewire": "^3.0.2",
