--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node-telegram-bot-api": "^0.28.2",
     "@types/react": "^16.0.35",
     "@types/react-dom": "^16.0.3",
+    "@types/sinon": "^4.1.3",
     "@types/winston": "^2.3.7",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
@@ -57,6 +58,7 @@
     "react-dom": "^16.2.0",
     "rewire": "^3.0.2",
     "serve-favicon": "^2.4.5",
+    "sinon": "^4.2.2",
     "tsify": "^3.0.4",
     "tslint": "^5.9.1",
     "tslint-config-airbnb-base": "^0.1.0",
