--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,13 @@
     "outDir": "./out",
     "allowJs": true,
     "jsx": "react",
+    "experimentalDecorators": true,
     "removeComments": true
   },
   "include": [
       "server/src/**/*.ts",
+      "ConsumerWebApp/src/**/*.ts",
+      "ConsumerWebApp/src/**/*.tsx"
       // "WebAdmin/src/**/*.ts",
       // "WebAdmin/src/**/*.tsx"
   ],
