--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "browserify": "^15.2.0",
+    "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "del": "^3.0.0",
     "dotenv": "^4.0.0",
