--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "express-graphql": "^0.6.11",
     "geolib": "^2.0.24",
     "graphql": "^0.12.3",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-mocha": "^5.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-tslint": "^8.1.2",
@@ -50,6 +50,7 @@
     "mobx-react-devtools": "^4.2.15",
     "mobx-router": "^0.0.8",
     "mocha": "^5.0.0",
+    "mocha-cli": "^1.0.1",
     "moment": "^2.20.1",
     "mongoose": "^5.0.2",
     "node-fetch": "^1.7.3",
@@ -60,7 +61,7 @@
     "react-dom": "^16.2.0",
     "rewire": "^3.0.2",
     "serve-favicon": "^2.4.5",
-    "sinon": "^4.2.2",
+    "sinon": "1.17.2",
     "tsify": "^3.0.4",
     "tslint": "^5.9.1",
     "tslint-config-airbnb-base": "^0.1.0",
