--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/geolib": "^2.0.23",
     "@types/graphql": "^0.12.3",
     "@types/lodash": "^4.14.98",
-    "@types/material-ui": "^0.20.5",
     "@types/mocha": "^2.2.47",
     "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.0.0",
@@ -24,6 +23,9 @@
     "@types/react-dom": "^16.0.3",
     "@types/sinon": "^4.1.3",
     "@types/winston": "^2.3.7",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -43,7 +45,7 @@
     "gulp-typescript": "^3.2.4",
     "gulp-uglify": "^3.0.0",
     "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.31",
+    "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
