--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^16.0.3",
     "@types/sinon": "^4.1.3",
     "@types/winston": "^2.3.7",
+    "awesome-typescript-loader": "^3.4.1",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
@@ -64,6 +65,7 @@
     "rewire": "^3.0.2",
     "serve-favicon": "^2.4.5",
     "sinon": "1.17.2",
+    "source-map-loader": "^0.2.3",
     "tsify": "^3.0.4",
     "tslint": "^5.9.1",
     "tslint-config-airbnb-base": "^0.1.0",
@@ -72,5 +74,6 @@
     "vinyl-source-stream": "^2.0.0",
     "whatwg-fetch": "^2.0.3",
     "winston": "^2.4.0"
-  }
+  },
+  "devDependencies": {}
 }
