--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.98",
     "@types/mocha": "^2.2.47",
     "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.5.4",
     "@types/mongoose": "^5.0.0",
     "@types/node": "^9.4.0",
     "@types/node-telegram-bot-api": "^0.28.2",
@@ -55,6 +56,7 @@
     "mocha": "^5.0.0",
     "mocha-cli": "^1.0.1",
     "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
     "mongoose": "^5.0.2",
     "node-fetch": "^1.7.3",
     "node-telegram-bot-api": "^0.30.0",
