Infrastructure changes to separate the script file that updates the code from the one that compiles and run the server

--- a/infrastructure/Dockerfile
+++ b/infrastructure/Dockerfile
@@ -24,4 +24,4 @@ RUN yarn
 RUN yarn global add typescript
 
 WORKDIR /usr/src/pura_cozinha/infrastructure
-CMD ./startServer.sh
+CMD ./updateAndRun.sh
