--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/bcrypt": "^1.0.0",
     "@types/bluebird": "^3.5.20",
     "@types/body-parser": "^1.16.8",
+    "@types/classnames": "^2.2.3",
     "@types/express": "^4.11.0",
     "@types/express-graphql": "^0.0.35",
     "@types/geolib": "^2.0.23",
@@ -34,6 +35,7 @@
     "browserify": "^15.2.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "classnames": "^2.2.5",
     "del": "^3.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
