Unit GraphQL and New ingredient form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "server/src/**/*.ts",
       "ConsumerWebApp/src/**/*.ts",
       "KitchenWebApp/src/**/*.ts",
+      "WebAdminApp/src/**/*.ts",
       "common/**/*.ts",
   ]
 }
