--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node-telegram-bot-api": "^0.28.2",
     "@types/react": "^16.0.35",
     "@types/react-dom": "^16.0.3",
+    "@types/react-infinite-scroll-component": "^4.1.0",
     "@types/sinon": "^4.1.3",
     "@types/winston": "^2.3.7",
     "awesome-typescript-loader": "^3.4.1",
@@ -66,6 +67,8 @@
     "paypal-rest-sdk": "^1.8.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-infinite-scroll-component": "^4.1.0",
+    "react-infinite-scroller": "^1.2.0",
     "rewire": "^3.0.2",
     "serve-favicon": "^2.4.5",
     "sinon": "1.17.2",
