--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "browserify": "^15.2.0",
@@ -78,7 +78,7 @@
     "tslint": "^5.9.1",
     "tslint-config-airbnb-base": "^0.1.0",
     "twit": "^2.2.9",
-    "typescript": "^2.6.2",
+    "typescript": "2.6",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
