--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "browserify": "^15.2.0",
