--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "node-fetch": "^1.7.3",
     "node-pagseguro": "^0.1.9",
     "node-telegram-bot-api": "^0.30.0",
+    "pagseguro-nodejs": "^0.1.2",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "react": "^16.2.0",
