--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^3.11.0",
     "whatwg-fetch": "^2.0.3",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "webpack-cli": "^2.0.12"
