--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "twit": "^2.2.9",
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
+    "url-search-params": "^1.0.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^3.11.0",
