--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "url-search-params": "^1.0.2",
+    "validator": "^10.7.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^3.11.0",
