--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-number-format": "^3.6.1",
     "rewire": "^3.0.2",
     "serve-favicon": "^2.4.5",
     "sinon": "1.17.2",
@@ -77,6 +78,7 @@
     "twit": "^2.2.9",
     "typescript": "^2.6.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
+    "validator": "^10.7.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^3.11.0",
